<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MonkeyBOOM Chat</string>
    <string name="dialog_username">Join or Create channel :</string>
    <string name="change_username">Change Username</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="action_add_channel">Add Channel</string>
    <string name="action_add_todo">Add Todo</string>
    <string name="action_show_members">Show Members</string>
    <string name="action_map_location">Map Location</string>
    <string name="action_Drawing">Drawing</string>
    <string name="action_todo_list">Todo List</string>
    <string name="action_video_chat">Video/Audio Chat</string>
    <string name="title_activity_board_list">BoardListActivity</string>

    <string name="action_new_board">New board</string>

    <string name="error">Vendor key updated, please login again.</string>
    <string name="error_101">Invalid vendor key, please login again.</string>
    <string name="error_confirm">Done</string>

    <string name="channel_title">Join or Create channel :</string>
    <string name="channel_mute">Mute</string>
    <string name="channel_loudspeaker">Speaker</string>
    <string name="channel_close">Camera Off</string>
    <string name="channel_change">Switch Camera</string>
    <string name="channel_video">Video Call</string>
    <string name="channel_voice">Voice Call</string>
    <string name="channel_prepare">Waiting for attendees</string>
    <string name="channel_join">&#160;joined room</string>
    <string name="channel_leave">&#160;left room</string>
    <string name="channel_mute_video">&#160;muted video</string>
    <string name="channel_open_video">&#160;unmuted video</string>
    <string name="channel_mute_audio">&#160;muted audio</string>
    <string name="channel_open_audio">&#160;unmuted audio</string>

    <string name="sliding_value_cif">CIF</string>
    <string name="sliding_value_480">480p</string>
    <string name="sliding_value_720">720p</string>
    <string name="sliding_value_1080">1080p</string>

    <string name="sliding_value_150k">150kbps</string>
    <string name="sliding_value_500k">500kbps</string>
    <string name="sliding_value_800k">800kbps</string>
    <string name="sliding_value_1m">1Mbps</string>
    <string name="sliding_value_2m">2Mbps</string>
    <string name="sliding_value_5m">5Mbps</string>
    <string name="sliding_value_10m">10Mbps</string>

    <string name="sliding_value_15">15fps</string>
    <string name="sliding_value_20">20fps</string>
    <string name="sliding_value_24">24fps</string>
    <string name="sliding_value_30">30fps</string>
    <string name="sliding_value_60">60fps</string>

    <string name="sliding_value_0">Mute</string>
    <string name="sliding_value_50">50</string>
    <string name="sliding_value_100">100</string>
    <string name="sliding_value_150">150</string>
    <string name="sliding_value_200">200</string>
    <string name="sliding_value_255">255</string>

    <string name="evaluation_top">Please rate the call</string>
    <string name="evaluation_bottom">Let us do better</string>
    <string name="evaluation_time">Total Time</string>
    <string name="evaluation_bytes">Total Trafic</string>
    <string name="evaluation_close">Close</string>
    <string name="evaluation_evaluate">Rate</string>

    <string name="sliding_record">Conf. History</string>
    <string name="sliding_resolution">Video Resolution</string>
    <string name="sliding_rate">Max. Bitrate</string>
    <string name="sliding_frame">Max. Framerate</string>
    <string name="sliding_volume">Speaker Volume</string>
    <string name="sliding_tape">Recording</string>
    <string name="sliding_path">Log Path</string>
    <string name="sliding_float">Pop up</string>
    <string name="sliding_about">About</string>

    <string name="title_activity_to_do_list">My ToDo List</string>
    <string name="addTodoText">ToDo</string>
    <string name="addTodo">Add</string>
    <string name="cancleTodoAdd">Cancel</string>

    <string name="title_activity_main">MonkeyBOOM Chat</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="email">Email</string>

    <string name="app_key">6kwktg77t41fn5x</string>
    <string name="title_activity_files">Files</string>
    <string name="share_file">Share File</string>
    <string name="receive_email">Receive Email Intent</string>
    <string name="email_string2" formatted = "false"> <![CDATA[<!DOCTYPE html>
<html>
<body>

<p>
<a href="monkeyboom://new_uswer" target="_top">Register Now</a>
</p>

</body>
</html>
]]>
    </string>
    <string name="email_string" formatted="false"><![CDATA[
    <html xmlns="http://www.w3.org/1999/xhtml">
<head>
<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
<title>Untitled Document</title>
</head>
<body>

<div style="width:100%;" align="center">

<table width="100%" border="0" cellspacing="0" cellpadding="0">
  <tr>
    <td align="center" valign="top" style="background-color:#ff0066;" bgcolor="#ff0066;">
        <table width="600" border="0" cellspacing="0" cellpadding="0">
          <tr>
            <td width="20" align="left" valign="top" bgcolor="#000000" style="background-color:#000000;">&nbsp;</td>
            <td align="center" valign="top" bgcolor="#000000" style="background-color:#000000; color:#7b7b7b; font-family:Arial, Helvetica, sans-serif; font-size:14px;"><br>
              <br>
            <br>
            <div style="color:#ff0066; font-family:Georgia, Times New Roman, Times, serif; font-size:24px;">
            	MonkeyBOOM<br>
                invites you to join our conversation.
            </div><br>
                <br>
                <img src="images/flame.gif" width="117" height="163" style="display:block;"><br>
                <br>
<br>
                <table width="100%" border="0" cellspacing="0" cellpadding="0">
                  <tr>
                    <td align="center" valign="middle"><img src="http://www.daftlydomestic.com/wp-content/uploads/2014/01/invite.jpg" alt="" width="544" height="5"></td>
                  </tr>
                  <tr>
                    <td height="65" align="center" valign="middle"><div style="color:#FFFFFF; font-size:28px; font-family:Arial, Helvetica, sans-serif;"><p>
                        <a href="monkeyboom://new_user" target="_top">Register Now</a>
                    </p></div></td>
                  </tr>
                  <tr>
                    <td align="center" valign="middle"><img src="images/divider.gif" alt="" width="544" height="5"></td>
                  </tr>
                </table>
                <br>
                <br>
</td>
            <td width="20" align="left" valign="top" bgcolor="#000000" style="background-color:#000000;">&nbsp;</td>
          </tr>
        </table>
    </td>
  </tr>
</table>

</div>

</body>
</html>
]]></string>
    <string name="send_email_title">Your friend\'s Email Address:</string>
    <string name="email_id"></string>
    <string name="email_password"></string>


    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>

</resources>
